plugins {
	id "idea"
	id "maven-publish"
	id "net.minecraftforge.gradle" version "${ForgeGradle}"
	id "com.github.joschi.licenser" version "${Licenser}"
	id "io.github.themrmilchmann.curseforge-publish" version "${CurseForge}"
}

project.ext.username = System.getenv("MAVEN_USERNAME")
project.ext.password = System.getenv("MAVEN_PASSWORD")
project.ext.token = System.getenv("CURSEFORGE_TOKEN")

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
	mappings channel: "official", version: MinecraftVersion
	reobf = false
	copyIdeResources = true
	accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
	
	runs {
		configureEach {
			property "forge.logging.markers", "REGISTRIES"
			property "forge.logging.console.level", "debug"
		}
		
		client {
			workingDirectory project.file("run")
			
			property "forge.enabledGameTestNamespaces", "xbackpack"
			property "forge.logging.mojang.level", "debug"
			
			mods {
				xbackpack {
					source sourceSets.main
				}
			}
		}
		
		server {
			workingDirectory project.file("run")
			
			property "forge.enabledGameTestNamespaces", "xbackpack"
			property "forge.logging.mojang.level", "debug"
			
			mods {
				xbackpack {
					source sourceSets.main
				}
			}
		}
		
		gameTestServer {
			workingDirectory project.file("run")
			
			property "forge.enabledGameTestNamespaces", "xbackpack"
			property "mixin.env.remapRefMap", "true"
			property "mixin.env.refMapRemappingFile", "${buildDir}/createSrgToMcp/output.srg"
			
			mods {
				xbackpack {
					source sourceSets.main
				}
			}
		}
		
		data {
			workingDirectory project.file("run")
			
			args "--mod", "xbackpack", "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources/")
			
			mods {
				xbackpack {
					source sourceSets.main
				}
			}
		}
	}
}

sourceSets.main.resources {srcDir "src/generated/resources"}

repositories {
	maven {
		name = "Jared's maven"
		url = "https://maven.blamejared.com/"
	}
	maven {
		name = "ModMaven"
		url = "https://modmaven.dev/"
	}
}

dependencies {
	minecraft "net.minecraftforge:forge:${MinecraftVersion}-${ForgeVersion}"
	
	implementation('net.sf.jopt-simple:jopt-simple:5.0.4') { version { strictly '5.0.4' } }
	
	compileOnly "mezz.jei:jei-${MinecraftVersion}-common-api:${JeiVersion}"
	compileOnly "mezz.jei:jei-${MinecraftVersion}-forge-api:${JeiVersion}"
	runtimeOnly "mezz.jei:jei-${MinecraftVersion}-forge:${JeiVersion}"
	
/*	compileOnly(fg.deobf("mezz.jei:jei-1.21-common-api:19.5.0.47"))
	compileOnly(fg.deobf("mezz.jei:jei-1.21-forge-api:19.5.0.47"))
	runtimeOnly(fg.deobf("mezz.jei:jei-1.21-forge:19.5.0.47"))*/
}

compileJava.dependsOn(updateLicenses)

license {
	header = file("header.txt")
	include("**/*.java")
}

java {
	withSourcesJar()
}

artifacts {
	archives sourcesJar
}

def ver = "${MinecraftVersion}-${ModVersion}"
curseforge {
	apiToken = "${project.ext.token}"
	publications {
		register("curseForge") {
			projectId = "557199"
			
			artifacts.register("main") {
				displayName = "XBackpack-${ver}"
				from(tasks.named("jar"))
			}
		}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			groupId = "net.luis"
			artifactId = "XBackpack"
			version = ver
			artifact jar
			artifact sourcesJar
		}
	}
	repositories {
		if (project.ext.username != null && project.ext.password != null) {
			maven {
				url "https://maven.luis-st.net/forge/"
				credentials.username = username
				credentials.password = password
			}
		} else {
			System.err.println("No credentials provided. Publishing to maven.luis-st.net not possible.")
		}
	}
}

def resourceTargets = ["META-INF/mods.toml", "pack.mcmeta"]
def replaceProperties = [
	MinecraftVersion: MinecraftVersion, MinecraftVersionRange: MinecraftVersionRange,
	ForgeVersion: ForgeVersion, ForgeVersionRange: ForgeVersionRange,
	ForgeLoaderRange: ForgeLoaderRange, ModVersion: ModVersion
]
processResources {
	inputs.properties replaceProperties
	replaceProperties.put "project", project
	
	filesMatching(resourceTargets) {
		expand replaceProperties
	}
}

jar {
	archiveFileName = "XBackpack-${ver}.jar"
	manifest {
		attributes([
			"Specification-Title": "XBackpack",
			"Specification-Version": "${ModVersion}",
			"Implementation-Title": project.name,
			"Implementation-Timestamp": new Date().format("yyyy-MM-dd HH:mm:ssZ"),
			"Mod-Author": "Luis-st",
			"Mod-ID": "xbackpack",
		])
	}
	finalizedBy("reobfJar")
}

sourcesJar {
	outputs.upToDateWhen {false}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
}

sourceSets.each {
	def dir = layout.buildDirectory.dir("sourcesSets/${it.name}")
	it.output.resourcesDir = dir
	it.java.destinationDirectory = dir
}
